json server installed

--- a/src/app/dishes-list/dishes-list.component.html
+++ b/src/app/dishes-list/dishes-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  dishes-list works!
-</p>
+<h2>My Heroes</h2>
+<ul class="dishes">
+  <li>
+    <span class="badge">{{}}</span> {{}}
+  </li>
+</ul>
