calculates sum of order

--- a/src/app/order-basket/order-basket.component.html
+++ b/src/app/order-basket/order-basket.component.html
@@ -5,3 +5,5 @@ Koszyk2
     <button class="button" (click)="service.removeDishFromBasket(dish)">-</button>
   </li>
 </ul>
+<br>
+<a>Razem: {{service.getBasketCost()}}</a>
