adds orders to db, but without dishes id's

--- a/src/app/order-basket/order-basket.component.html
+++ b/src/app/order-basket/order-basket.component.html
@@ -8,4 +8,4 @@ Koszyk
 <br>
 <a>Razem: {{service.getBasketCost()}}</a>
 <br>
-<button class="button">Zamowienie</button>
+<button class="button" routerLink="/summary">Zamowienie</button>
