dashboard dishes components, displays list of dishes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <header style="text-align:center">
+  <button routerLink="dashboard-dishes-list">Lista dan admin</button>
   <h1>
     Welcome to {{ title }}!
   </h1>
