--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -3,7 +3,7 @@
   <form [formGroup]="clientDetails">
     <div>
       <label>Imie:
-        <input type="text" class="field-style field-split align-left" formControlName="firstName">
+        <input type="text" formControlName="firstName">
       </label> <br>
       <label>Nazwisko:
         <input type="text" formControlName="lastName">
