--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <header style="text-align:center">
   <button routerLink="dashboard-dishes-list">Lista dan admin</button>
+  <button routerLink="dashboard-orders-list">Lista zamowien admin</button>
   <h1>
     Welcome to {{ title }}!
   </h1>
