--- a/src/app/dishes/dishes-list/dishes-list.component.scss
+++ b/src/app/dishes/dishes-list/dishes-list.component.scss
@@ -2,15 +2,19 @@
   margin: 0 0 2em 0;
   list-style-type: none;
   padding: 0;
-  width: 15em;
+  width: 60vw;
+  height: 60vh;
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
 }
 .dishes li {
-  position: relative;
   cursor: pointer;
   background-color: #EEE;
-  margin: .5em;
-  padding: .3em 0;
-  height: 1.6em;
+  display:flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
   border-radius: 4px;
 }
 
@@ -20,55 +24,70 @@
   left: .1em;
 }
 
-.dishes a {
-  color: #888;
-  text-decoration: none;
-  position: relative;
-  display: block;
-  width: 250px;
-}
-
-.dishes a:hover {
-  color:#607D8B;
-}
-
 .dishes .badge {
-  display: inline-block;
   font-size: small;
   color: white;
   padding: 0.8em 0.7em 0 0.7em;
   background-color: #607D8B;
-  line-height: 1em;
-  position: relative;
-  left: -1px;
-  top: -4px;
-  height: 1.8em;
   min-width: 16px;
-  text-align: right;
-  margin-right: .8em;
   border-radius: 4px 0 0 4px;
 }
 
+li * {
+  width:20%;
+  height:auto;
+}
 .menu{
   background: lightgrey;
   border: thin black;
   border-top: 20px;
-  width: 65vw;
+  width: 90vw;
   height: 70vh;
   border-radius: 30px;
   display:  flex;
   margin: 10px;
   top: 100px;
   right: 0;
+  flex-direction: column;
 }
 
 .button {
   background-color: #af2c22;
   border: none;
   color: white;
-  padding: 15px 32px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
   font-size: 16px;
+}
+
+button.button{
+  width:10%;
+}
+
+.menu div{
+  width:100%;
+  height:10vh;
+  display:flex;
+  justify-content: space-around;
+}
+.menu div div{
+  width:30%;
+  heigth:24px;
+  vertical-align: center;
+}
+
+.button-menu{
+  background-color: #af2c22;
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  width:90%;
+}
+
+app-order-basket{
+  height:60vh;
+  width: 20vw;
+  background-color: antiquewhite;
 }
