--- a/src/app/orders/order-basket/order-basket.component.scss
+++ b/src/app/orders/order-basket/order-basket.component.scss
@@ -27,8 +27,9 @@ li{
 }
 
 .buttonOrder{
-  width: 120px;
-  background-color: red;
+  width: 130px;
+  background-color: #af2c22;
+  border: none;
   color:white;
-  height: 20px;
+  height: 25px;
 }
