--- a/src/app/dashboard/dashboard-orders-list/dashboard-orders-list.component.html
+++ b/src/app/dashboard/dashboard-orders-list/dashboard-orders-list.component.html
@@ -2,13 +2,35 @@
 
 <section class="menu">
 
-  <ul class="dishes">
+  <table>
+    <tr>
+      <th>Numer pozycji</th>
+      <th>Ulica</th>
+      <th>Status</th>
+      <th>Data</th>
+      <th></th>
+      <th></th>
+    </tr>
+
+    <tr *ngFor="let order of orders">
+      <td>{{order.id}}</td>
+      <td>{{order.street}}</td>
+      <td>{{order.status}}</td>
+      <td>{{order.date}}</td>
+      <td><button class="button" routerLink="/dashboard-order-details/{{order.id}}">Podglad</button></td>
+      <td> <button class="button" routerLink="/dashboard-order-address/{{order.id}}">Adres</button></td>
+    </tr>
+
+  </table>
+
+
+<!--  <ul class="dishes">
     <li *ngFor="let order of orders">
       <span class="badge">{{order.id}}</span> {{order.street}} {{order.status}} {{order.date}}
       <button class="button" routerLink="/dashboard-order-details/{{order.id}}">Podglad</button>
       <button class="button" routerLink="/dashboard-order-address/{{order.id}}">Adres</button>
     </li>
-  </ul>
+  </ul>-->
 
 </section>
 <a routerLink="/">Powrot</a>
