control-panel added for dashboard views

--- a/src/app/dashboard/dashboard-dishes-list/dashboard-dishes-list.component.html
+++ b/src/app/dashboard/dashboard-dishes-list/dashboard-dishes-list.component.html
@@ -1,7 +1,5 @@
 <h2>Dishes list</h2>
 
-<button routerLink="/dashboard-orders-list"></button>
-
 <div class="menu" *ngIf="dishes!=undefined">
   <table>
     <tr>
@@ -36,4 +34,4 @@
 </section>-->
 
 
-<a routerLink="/">Powrot</a>
+<a routerLink="/admin-panel">Powrot</a>
