--- a/src/app/dashboard/dashboard-dish-details/dashboard-dish-details.component.html
+++ b/src/app/dashboard/dashboard-dish-details/dashboard-dish-details.component.html
@@ -8,4 +8,4 @@
       <li>Dostepnosc: {{dish.isAvailable}}</li>
   </ul>
 </div>
-<a routerLink="/dashboard-dishes-list">Powrot</a>
+<a routerLink="/admin-panel/dashboard-dishes-list">Powrot</a>
