--- a/src/app/dashboard/dashboard-order-address/dashboard-order-address.component.html
+++ b/src/app/dashboard/dashboard-order-address/dashboard-order-address.component.html
@@ -5,4 +5,4 @@
   <p>Numer mieszkania: {{order.apartmentNumber}}</p>
   <p>Numer kontaktowy: {{order.phoneNumber}}</p>
 </div>
-<a routerLink="/dashboard-orders-list">Powrot</a>
+<a routerLink="/admin-panel/dashboard-orders-list">Powrot</a>
