--- a/src/app/dashboard/dashboard-orders-list/dashboard-orders-list.component.html
+++ b/src/app/dashboard/dashboard-orders-list/dashboard-orders-list.component.html
@@ -2,9 +2,9 @@
 
 <section class="menu">
 
-  <table>
+  <table class="tg">
     <tr>
-      <th>Numer pozycji</th>
+      <th class="tg">Numer pozycji</th>
       <th>Ulica</th>
       <th>Status</th>
       <th>Data</th>
