--- a/src/app/dashboard/dashboard-dishes-list/dashboard-dishes-list.component.scss
+++ b/src/app/dashboard/dashboard-dishes-list/dashboard-dishes-list.component.scss
@@ -8,6 +8,12 @@
   margin: 10px;
   top: 100px;
   right: 0;
+  justify-content: center;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
 }
 
 .tg {
