--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,4 +20,9 @@ header {
   width: 100%;
   height: 70px;
   background-color: #af2c22;
+  align-items: center;
+}
+
+.pizza-icon {
+  height: -webkit-fill-available;
 }
