--- a/src/app/credentials/login/login.component.html
+++ b/src/app/credentials/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="form">
+<!--<section class="form">
 <form [formGroup]="loginForm">
   <div>
     <label>Login:
@@ -11,4 +11,39 @@
   <button class="submitbtn" (click)="validateLogin()">Zaloguj</button>
 </form>
 </section>
+<a routerLink="/">Powrot</a>-->
+
+<div class="limiter">
+  <div class="container-login100">
+    <div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-50">
+      <form class="login100-form validate-form" [formGroup]="loginForm">
+					<span class="login100-form-title p-b-33">
+						Admin Login
+					</span>
+
+        <div class="wrap-input100 validate-input">
+          <input class="input100" type="text" formControlName="name" placeholder="Login">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="wrap-input100 rs1 validate-input">
+          <input class="input100" type="password" formControlName="password" placeholder="Haslo">
+          <span class="focus-input100-1"></span>
+          <span class="focus-input100-2"></span>
+        </div>
+
+        <div class="container-login100-form-btn m-t-20">
+          <button class="login100-form-btn" (click)="validateLogin()">
+            Zaloguj
+          </button>
+        </div>
+
+
+
+      </form>
+    </div>
+  </div>
+</div>
+
 <a routerLink="/">Powrot</a>
