--- a/src/app/orders/order-basket/order-basket.component.html
+++ b/src/app/orders/order-basket/order-basket.component.html
@@ -10,6 +10,8 @@
 <br>
 <span>Razem: {{service.getBasketCost()}} zł</span>
 <br>
-<div class="containsButton"><button class="buttonOrder" routerLink="/summary">Zamowienie</button></div>
+<div class="containsButton">
+  <button [disabled]="service.getBasketCost()<=0" class="buttonOrder" routerLink="/summary">Zamowienie</button>
+</div>
 
 
