--- a/src/app/orders/order-info/order-info.component.html
+++ b/src/app/orders/order-info/order-info.component.html
@@ -1,9 +1,10 @@
-<div style="margin: auto; vertical-align: center; width: 40%">
-  <div style="text-align: center">
-    <h3>Zamowienie zostalo wyslane</h3>
+<div class="container">
+  <div class="message" style="text-align: center">
+    <h2>Zamowienie zostalo wyslane</h2>
     <h2>Dziekujemy za wybranie najlepszej pizzy w miescie! :)</h2>
-    <nav class="small-nav">
-      <a routerLink="/">Powrot do strony glownej</a>
-    </nav>
+      <button routerLink="/">Powrot do strony glownej</button>
+  </div>
+  <div>
+    <img src="../../../assets/icons/pizza-box.png">
   </div>
 </div>
