--- a/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
+++ b/src/app/dashboard/dashboard-order-details/dashboard-order-details.component.scss
@@ -1,3 +1,4 @@
+
 .menu{
   background: lightgrey;
   border: thin black;
@@ -9,4 +10,78 @@
   margin: 10px;
   top: 100px;
   right: 0;
+  justify-content: center;
+}
+
+.tg {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border-color: #999;
+  text-align: justify;
+  vertical-align: top;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.tg td {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  padding: 5px 15px;
+  border-style: solid;
+  border-width: 0;
+  overflow: hidden;
+  word-break: normal;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-color: #999;
+  color: #444;
+  background-color: #F7FDFA;
+}
+
+.tg th {
+  font-family: Arial, sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  padding: 10px 10px;
+  border-style: solid;
+  border-width: 0;
+  overflow: hidden;
+  word-break: normal;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-color: #999;
+  color: #fff;
+  background-color: #af4f47;
+}
+
+.info {
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.buttons {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.button {
+  background-color: #af2c22;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 10px;
+}
+
+.returnButton {
+  background-color: darkseagreen;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 10px;
 }
